--- a/temas/pagina-3.html
+++ b/temas/pagina-3.html
@@ -43,7 +43,7 @@
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint ratione tempore non quidem corrupti ullam, eveniet rerum neque vero laborum, natus dignissimos deleniti veniam repudiandae placeat quia voluptatum quasi numquam.
            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam sint officia pariatur explicabo, harum cumque corporis consectetur, error optio deleniti laboriosam incidunt itaque accusamus. Non commodi vel culpa animi eaque
            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa atque a perspiciatis nostrum amet blanditiis quos expedita saepe voluptates eaque minus soluta, temporibus architecto maiores incidunt veritatis quia nulla harum!</p>
-           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, tenetur quos? Facilis deserunt pariatur, tenetur ipsa, earum repudiandae velit dicta corrupti veniam aliquid numquam quasi doloribus quis doloremque molestiae adipisci.<p>
+           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, tenetur quos? Facilis deserunt pariatur, tenetur ipsa, earum repudiandae velit dicta corrupti veniam aliquid numquam quasi doloribus quis doloremque molestiae adipisci.</p>
            <p class="text-muted"> Last update 3 mins ago</p>
           </div>
           </div>
